Hent og rediger opplysning om barn (#139)
* WIP: Fortsett på implementering av henting og redigering av opplysning om barn.

* Fjern "fraRegister" fra BarnRequestDTO.

* Oppdater OpenAPI-spec med endepunkter for hent og oppdater opplysning.

* Bytt ut DTOer med genererte DTOer fra OpenAPI.

* Oppdater OpenAPI-spec med mulig respons og legg til test for påkrevde felter.

* Fjern tomt get-kall.

* Fjern overflødig call respons.

* Ta vare på saksbehandlers ident.

* Implementer oppdatering av barn i OpplysningService og test-databasen.


* Setter "kvalifisertTilBarnetillegg" samt perioden for barnetillegg.


* Implementer "hent" og "oppdaterBarn".

* Deploy branch til dev.

* Legg til midlertidig logging for debugging.

* Mer logging for debugging.

* Legg parsing av requestbody i en try-catch.

* Ktlint.

* Bruk funksjon for å konfigurere objectmapper i ContentNegotiation

* Rydde opp i logging etter debugging.

* Sett deploy til dev tilbake til main branch.

---------
