# src/main/kotlin/no/nav/dagpenger/soknad/orkestrator/opplysning/OpplysningApi.kt
@@ -8,12 +8,14 @@ import io.ktor.server.auth.authenticate
 import io.ktor.server.auth.jwt.jwt
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
+import io.ktor.server.routing.RoutingContext
 import io.ktor.server.routing.get
 import io.ktor.server.routing.put
 import io.ktor.server.routing.route
 import io.ktor.server.routing.routing
 import no.nav.dagpenger.soknad.orkestrator.api.auth.AuthFactory.azureAd
-import java.time.LocalDate
+import no.nav.dagpenger.soknad.orkestrator.api.auth.saksbehandlerId
+import no.nav.dagpenger.soknad.orkestrator.api.models.OppdatertBarnRequestDTO
 import java.util.UUID
 
 internal fun Application.opplysningApi(opplysningService: OpplysningService) {
@@ -25,18 +27,58 @@ internal fun Application.opplysningApi(opplysningService: OpplysningService) {
         get("/") { call.respond(HttpStatusCode.OK) }
 
         authenticate("azureAd") {
-            route("/opplysninger") {
-                get {
-                    call.respond(HttpStatusCode.OK)
-                }
+            route("/opplysninger/{søknadId}") {
                 route("/barn") {
                     get {
-                        call.respond(HttpStatusCode.OK, opplysningService.hentBarn())
+                        val søknadId = validerOgFormaterSøknadIdParam() ?: return@get
+
+                        call.respond(HttpStatusCode.OK, opplysningService.hentBarn(søknadId))
                     }
 
-                    put {
-                        val barn = call.receive<BarnDTO>()
-                        call.respond(HttpStatusCode.OK)
+                    put("/oppdater") {
+                        val søknadId = validerOgFormaterSøknadIdParam() ?: return@put
+                        val oppdatertBarn: OppdatertBarnRequestDTO
+
+                        try {
+                            oppdatertBarn = call.receive<OppdatertBarnRequestDTO>()
+                        } catch (e: Exception) {
+                            call.respond(
+                                HttpStatusCode.BadRequest,
+                                "Kunne ikke parse request body til OppdatertBarnRequestDTO. Feilmelding: $e",
+                            )
+                            return@put
+                        }
+
+                        val saksbehandlerId = call.saksbehandlerId()
+
+                        if (opplysningService.hentBarn(søknadId).find { it.barnId == oppdatertBarn.barnId } == null) {
+                            call.respond(
+                                HttpStatusCode.NotFound,
+                                "Fant ikke barn med id ${oppdatertBarn.barnId} for søknad $søknadId",
+                            )
+                            return@put
+                        }
+
+                        if (oppdatertBarn.kvalifisererTilBarnetillegg) {
+                            if (oppdatertBarn.barnetilleggFom == null || oppdatertBarn.barnetilleggTom == null) {
+                                call.respond(
+                                    HttpStatusCode.BadRequest,
+                                    "barnetilleggFom og barnetilleggTom må være satt når kvalifisererTilBarnetillegg er true",
+                                )
+                                return@put
+                            }
+                        }
+
+                        if (opplysningService.erEndret(oppdatertBarn, søknadId)) {
+                            opplysningService.oppdaterBarn(oppdatertBarn, søknadId, saksbehandlerId)
+                            call.respond(HttpStatusCode.OK)
+                        } else {
+                            call.respond(
+                                HttpStatusCode.NotModified,
+                                "Opplysningen inneholder ingen endringer, kan ikke oppdatere",
+                            )
+                            return@put
+                        }
                     }
                 }
             }
@@ -44,17 +86,20 @@ internal fun Application.opplysningApi(opplysningService: OpplysningService) {
     }
 }
 
-data class BarnDTO(
-    val barnSvarId: UUID,
-    val fornavnOgMellomnavn: String,
-    val etternavn: String,
-    val fødselsdato: LocalDate,
-    val oppholdssted: String,
-    val forsørgerBarnet: Boolean,
-    val fraRegister: Boolean,
-    val girBarnetillegg: Boolean,
-    val girBarnetilleggFom: LocalDate? = null,
-    val girBarnetilleggTom: LocalDate? = null,
-    val begrunnelse: String? = null,
-    val endretAv: String? = null,
-)
+private suspend fun RoutingContext.validerOgFormaterSøknadIdParam(): UUID? {
+    val søknadIdParam =
+        call.parameters["søknadId"] ?: run {
+            call.respond(HttpStatusCode.BadRequest, "Mangler søknadId i parameter")
+            return null
+        }
+
+    return try {
+        UUID.fromString(søknadIdParam)
+    } catch (e: Exception) {
+        call.respond<String>(
+            HttpStatusCode.BadRequest,
+            "Kunne ikke parse søknadId parameter $søknadIdParam til UUID. Feilmelding: $e",
+        )
+        return null
+    }
+}
